@@ -1,3 +1,5 @@
+- Improvement: Move the custom calculation description from academic treasury event to debit entry, for standalone and extracurricular enrolments
+
 7.3.1 (19-08-2021)
 - Refactor: Allow specification of different product for standalone/extacurricular payment plans
 - Bug Fix: Invoice tuition calculation for standalone and extracurricular, passing the Enrolment
